--- a/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
@@ -160,6 +160,7 @@ function changed(){
         {
             error = $"Error: {e.Message}";
         }
+        navMgr.NavigateTo(navMgr.Uri, true);
     }
 
     private bool allowed()
@@ -191,12 +192,11 @@ function changed(){
             };
             await accountService.UpdateAsync(dto);
             msg = $"{value}{senderCurrency} converted to {receiverCurrency}";
-            loadInfo();
         }
         catch (Exception e)
         {
             throw new Exception(e.Message);
         }
-    }
+        navMgr.NavigateTo(navMgr.Uri, true);    }
 
 }
