--- a/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
@@ -29,10 +29,6 @@
         <div class="form-group field">
             <label>Account Receiver Number:</label>
             <input type="text" @bind="_accountNrReceiver" oninput="changed()" id="accountNr"/>
-            @if (string.IsNullOrEmpty(error))
-            {
-                <label>@error</label>
-            }
         </div>
         <div class="form-group field">
             <label for="currency">Currency:</label>
@@ -45,13 +41,13 @@
         <div class="form-group field">
             <label>Value:</label>
             <input type="text" @bind="_value" oninput="changed()" id="valueNr"/>
-            @if (string.IsNullOrEmpty(error))
-            {
-                <label>@error</label>
-            }
         </div>
         <div class="button-row">
             <button disabled @onclick="TransferMoni" class="acceptbtn" id="bttn">Send</button>
+            @if (!string.IsNullOrEmpty(error))
+            {
+                <label>@error</label>
+            }
         </div>
     </div>
 
@@ -161,15 +157,20 @@ function changed(){
         error = "";
         try
         {
+            if (accountNrSeder.Equals(long.Parse(_accountNrReceiver)))
+            {
+                throw new Exception("You cannot send money to the same account");
+            }
             MoneyTransferCreationDto dto = new MoneyTransferCreationDto(accountNrSeder, long.Parse(_accountNrReceiver), _currency, double.Parse(_value));
             await moneyTransferService.CreateAsync(dto);
             msg = $"{_value}{_currency} sent to account id: {_accountNrReceiver} ";
+            navMgr.NavigateTo(navMgr.Uri, true);
         }
         catch (Exception e)
         {
             error = $"Error: {e.Message}";
+            msg = error;
         }
-        navMgr.NavigateTo(navMgr.Uri, true);
     }
 
     private bool allowed()
@@ -201,11 +202,12 @@ function changed(){
             };
             await accountService.UpdateAsync(dto);
             msg = $"{value}{senderCurrency} converted to {receiverCurrency}";
+            navMgr.NavigateTo(navMgr.Uri, true);  
         }
         catch (Exception e)
         {
             throw new Exception(e.Message);
         }
-        navMgr.NavigateTo(navMgr.Uri, true);    }
+  }
 
 }
