changed index to be better

--- a/dotNetProject/BlazorWASM/Pages/Index.razor
+++ b/dotNetProject/BlazorWASM/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Welcome</PageTitle>
 
-<p class="center"> Just some news and info about banking idk</p>
+<p class="center"> Welcome to the VIA bank page</p>
 
 <style>
     .center{
