--- a/dotNetProject/BlazorWASM/Pages/ClientAdminPage.razor
+++ b/dotNetProject/BlazorWASM/Pages/ClientAdminPage.razor
@@ -44,7 +44,7 @@
     <button @onclick="UpdateAsync" class="acceptbtn">Update</button>
 </div>
 <div class="button-row">
-    <button @onclick="DeleteUser" class="acceptbtn">Delete User</button>
+    <button @onclick="DeleteUser" class="acceptbtn">Delete Client</button>
 </div>
 @if (!string.IsNullOrEmpty(msg))
 {
