--- a/dotNetProject/BlazorWASM/Shared/NavMenu.razor
+++ b/dotNetProject/BlazorWASM/Shared/NavMenu.razor
@@ -17,21 +17,30 @@
     </nav>
     <AuthorizeView Policy="MustBeClient">
         <Authorized>
-                <nav class="flex-column">
-                    <div class="nav-item px-3">
-                        <NavLink class="nav-link" href="Accounts" Match="NavLinkMatch.All">
-                            <span class="oi oi-home" aria-hidden="true"></span> Accounts
-                        </NavLink>
-                    </div>
-                </nav>
-                <nav class="flex-column">
-                    <div class="nav-item px-3">
-                        <NavLink class="nav-link" href="Plan" Match="NavLinkMatch.All">
-                            <span class="oi oi-home" aria-hidden="true"></span> Buy Plan
-                        </NavLink>
-                    </div>
-                </nav>
+            <nav class="flex-column">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Accounts" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Accounts
+                    </NavLink>
+                </div>
+            </nav>
+            <nav class="flex-column">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Plan" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Buy Plan
+                    </NavLink>
+                </div>
+            </nav>
         </Authorized>
+    </AuthorizeView>
+    <AuthorizeView Policy="MustBeAdministrator">
+        <nav class="flex-column">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="RegisterClient" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Register Client
+                    </NavLink>
+                </div>
+            </nav>
     </AuthorizeView>
 </div>
 
